# File: HISTORY.txt
#
26-Jan-2021 - V0.10 Preliminary version
27-Jan-2021 - V0.11 Update linux configuration and add exclusion filters in ChemCompModelGen()
27-Jan-2021 - V0.12 Python path adjustments in ChemCompModelExec()