@@ -58,7 +58,7 @@ def main():
     #
     try:
         pyLib = args.python_lib_path if args.python_lib_path else os.path.join(os.environ["PYENV_ROOT"], "versions", "3.7.9", "lib")
-        pyRoot = os.path.basename(pyLib)
+        pyRoot = os.path.dirname(pyLib)
         pyVer = args.python_version if args.python_version else "3.7"
         csdHome = args.csdhome if args.csdhome else os.environ["CSDHOME"]
         #
